# music-hearing

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
music_hearing/: __init__.py  __main__.py  cli.py  critic.py  dsp.py  fetch.py  harmony.py  metadata.py  music_v2.py  rhythm.py  semantics.py  similarity.py  spectral.py  structure.py  timbre.py
tests/: test_cli.py  test_critic.py  test_dsp.py  test_fetch.py  test_hardening.py  test_metadata.py  test_music_v2.py  test_semantics.py  test_spectral.py
