[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "music-hearing"
version = "0.2.0"
description = "Hear a track: acoustic profile + plain-language description, from a URL or search phrase. Agent-agnostic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tigrohvost" }]
keywords = ["audio", "music", "dsp", "yt-dlp", "acoustic", "mir", "agent", "skill"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = []

[project.optional-dependencies]
rich = ["numpy>=1.24"]
test = ["pytest>=7"]

[project.scripts]
music-hearing = "music_hearing.cli:main"

[project.urls]
Homepage = "https://github.com/tigrohvost/music-hearing"

[tool.setuptools]
packages = ["music_hearing"]
